--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "laraveles/spanish": "^1.2",
         "tightenco/ziggy": "^0.6.9",
         "uxweb/sweet-alert": "^2.0"
     },
