--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "bootstrap-vue": "^2.0.0-rc.15",
         "vee-validate": "^2.2.3",
         "vue-lodash": "^2.0.2",
         "vue-router": "^3.0.5",
-        "vue-select": "^3.0.0"
+        "vue-select": "^3.0.0",
+        "vue-sweetalert2": "^1.6.4"
     }
 }
