--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
     },
     "dependencies": {
         "bootstrap-vue": "^2.0.0-rc.15",
+        "filepond": "^4.4.0",
+        "filepond-plugin-file-validate-type": "^1.2.4",
+        "filepond-plugin-image-preview": "^4.0.8",
+        "filepond-plugin-image-validate-size": "^1.2.3",
         "vee-validate": "^2.2.3",
+        "vue-filepond": "^5.1.0",
         "vue-lodash": "^2.0.2",
         "vue-router": "^3.0.5",
         "vue-select": "^3.0.0",
