--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "filepond-plugin-file-validate-type": "^1.2.4",
         "filepond-plugin-image-preview": "^4.0.8",
         "filepond-plugin-image-validate-size": "^1.2.3",
+        "full-icu": "^1.2.1",
         "vee-validate": "^2.2.3",
         "vue-filepond": "^5.1.0",
         "vue-lodash": "^2.0.2",
