--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "bootstrap-vue": "^2.0.0-rc.15",
         "filepond": "^4.4.0",
+        "filepond-plugin-file-encode": "^2.1.4",
         "filepond-plugin-file-validate-type": "^1.2.4",
         "filepond-plugin-image-preview": "^4.0.8",
         "filepond-plugin-image-validate-size": "^1.2.3",
