--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "laraveles/spanish": "^1.2",
+        "nesbot/carbon": "^2.17",
         "tightenco/ziggy": "^0.6.9",
         "uxweb/sweet-alert": "^2.0"
     },
